--- a/.github/workflows/01-build-container.yaml
+++ b/.github/workflows/01-build-container.yaml
@@ -75,7 +75,7 @@ jobs:
           users: action/download-artifact@v4
           with:
             name: java-api-artifact
-        - name: Fake Deploy
+        - name: Fake deploy
           run: |
             echo " Build: $ {{ env.ARTIFACT_NAME }}"
             echo " Facke deploy to: https://stoping.example.com"
