--- a/.github/workflows/01-build-container.yaml
+++ b/.github/workflows/01-build-container.yaml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup Java
-        users: actions/setup-java@v2
+        uses: actions/setup-java@v2
         with:
           distribution: 'temurin'
           java-version: '17'
@@ -52,7 +52,7 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
        
-      - nama: Docker Login to ACR
+      - name: Docker Login to ACR
         run: az acr login --name ${{ env.REGISTRY_NAME }}
 
       - name: Tag Docker Image
