--- a/.github/workflows/01-build-container.yaml
+++ b/.github/workflows/01-build-container.yaml
@@ -12,7 +12,7 @@ permissions:
   contents: read
 
 env:
-  ARTFACTORY_NAME: "api=${{ github.sha }}.jar"
+  ARTFACT_NAME: "api=${{ github.sha }}.jar"
   IMAGE_NAME: "java-api:${{ github.sha }}"
   REGISTRY_NAME: ${{ secrets.AZURE_REGISTRY_NAME }}
   REGISTRY_IMAGE: "${{ secrets.AZURE_REGISTRY_NAME }}//java-api:${{ github.sha }}"
